--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,10 +17,12 @@ body {
 
 .container {
     width: 1200px;
-    margin:auto;
+    margin: auto;
 }
 
 .header-sidebar {
+    display: flex;
+    justify-content: space-between;
     background-color: #ffffff;
     width: 100%;
     height: 80px;
@@ -28,6 +30,7 @@ body {
 
 .header-styles a {
     text-decoration: none;
+
     background-color: #ffffff;
     width: 145px;
     height: 31px;
@@ -60,6 +63,8 @@ body {
 }
 
 .navi-type a {
+    display: flex;
+    justify-content: space-between;
     text-decoration: none;
     color: var(--main-color);
     font-size: 14px;
@@ -101,7 +106,11 @@ body {
     font-weight: 900;
     line-height: 1.36;
     text-align: center;
+    width: 696px;
+    height: 120px;
+    margin: auto;
     letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 
 .banner-button {
