--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -98,6 +98,8 @@ body {
     background-color: var(--background-firs-color);
     width: 100%;
     height: 600px;
+    padding-top: 200px;
+    text-align: center;
 }
 .banner-text {
     text-decoration: none;
@@ -118,6 +120,7 @@ body {
     color: var(--button-text);
     width: 200px;
     height: 50px;
+    margin-top: 30px;
     font-size: 16px;
     font-weight: 700;
     line-height: 1.88;
@@ -125,6 +128,8 @@ body {
     letter-spacing: 0.06em;
     cursor: pointer;
     border: none;
+    ox-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 }
 
 .advantages {
