--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,49 +22,43 @@ body {
 
 .header-sidebar {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #ffffff;
-    width: 100%;
+    align-items: center;
     height: 80px;
+    border-bottom: 1px solid #ececec;
 }
 
 .header-styles a {
     text-decoration: none;
-
     background-color: #ffffff;
     width: 145px;
     height: 31px;
+    font-family: "Raleway", sans-serif;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.1923;
+    letter-spacing: 0.03em;
+    margin-right: 93px;
+    text-align: center;
 }
 
 .logo-web {
-    text-decoration: none;
     color: var(--logo-color-first);
-    font-family: "Raleway", sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.1923;
-    letter-spacing: 0.03em;
 }
 
 .logo-studio {
-    text-decoration: none;
     color: var(--logo-color-second);
-    font-family: "Raleway", sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.1923;
-    letter-spacing: 0.03em;
 }
 
 .navi {
-    background-color: #ffffff;
-    width: 254px;
+    min-width: 254px;
     height: 16px;
+    margin: auto;
+    
 }
 
 .navi-type a {
-    display: flex;
-    justify-content: space-between;
     text-decoration: none;
     color: var(--main-color);
     font-size: 14px;
@@ -72,11 +66,18 @@ body {
     line-height: 1.38;
     display: inline;
     letter-spacing: 0.02em;
+    margin-right: 46px;
 }
 
 .navi-type a:hover,
 .navi-type a:focus {
     color: #2196f3;
+}
+
+.contacts{
+    min-width: 254px;
+    height: 16px;
+    margin: auto;
 }
 
 .contacts a {
@@ -87,6 +88,7 @@ body {
     line-height: 1.38;
     display: inline;
     letter-spacing: 0.02em;
+    margin-right: 50px;
 }
 
 .contacts a:hover,
