--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,46 +15,42 @@ body {
     color: #000000;
 }
 
-.container {
-    width: 1200px;
-    margin: auto;
-}
-
 .header-sidebar {
-    display: flex;
-    justify-content: center;
     background-color: #ffffff;
-    align-items: center;
+    width: 100%;
     height: 80px;
-    border-bottom: 1px solid #ececec;
 }
-
 .header-styles a {
     text-decoration: none;
     background-color: #ffffff;
     width: 145px;
     height: 31px;
+}
+
+.logo-web {
+    text-decoration: none;
+    color: var(--logo-color-first);
     font-family: "Raleway", sans-serif;
     font-size: 26px;
     font-weight: 700;
     line-height: 1.1923;
     letter-spacing: 0.03em;
-    margin-right: 93px;
-    text-align: center;
-}
-
-.logo-web {
-    color: var(--logo-color-first);
 }
 
 .logo-studio {
+    text-decoration: none;
     color: var(--logo-color-second);
+    font-family: "Raleway", sans-serif;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1.1923;
+    letter-spacing: 0.03em;
 }
 
 .navi {
-    min-width: 254px;
+    background-color: #ffffff;
+    width: 254px;
     height: 16px;
-    margin: auto;
 }
 
 .navi-type a {
@@ -65,18 +61,11 @@ body {
     line-height: 1.38;
     display: inline;
     letter-spacing: 0.02em;
-    margin-right: 46px;
 }
 
 .navi-type a:hover,
 .navi-type a:focus {
     color: #2196f3;
-}
-
-.contacts {
-    min-width: 254px;
-    height: 16px;
-    margin: auto;
 }
 
 .contacts a {
@@ -87,7 +76,6 @@ body {
     line-height: 1.38;
     display: inline;
     letter-spacing: 0.02em;
-    margin-right: 50px;
 }
 
 .contacts a:hover,
@@ -99,8 +87,6 @@ body {
     background-color: var(--background-firs-color);
     width: 100%;
     height: 600px;
-    padding-top: 200px;
-    text-align: center;
 }
 .banner-text {
     text-decoration: none;
@@ -109,11 +95,7 @@ body {
     font-weight: 900;
     line-height: 1.36;
     text-align: center;
-    width: 696px;
-    height: 120px;
-    margin: auto;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
 }
 
 .banner-button {
@@ -121,7 +103,6 @@ body {
     color: var(--button-text);
     width: 200px;
     height: 50px;
-    margin-top: 30px;
     font-size: 16px;
     font-weight: 700;
     line-height: 1.88;
@@ -129,8 +110,6 @@ body {
     letter-spacing: 0.06em;
     cursor: pointer;
     border: none;
-    ox-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
 
 .advantages {
