--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,6 +10,12 @@
     --button-text: #ffffff;
 }
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: "Roboto", "Raleway", sans-serif;
     color: #000000;
@@ -128,6 +134,7 @@ body {
     vertical-align: top;
     text-transform: uppercase;
     padding-top: 200px;
+    padding-bottom: 30px;
 }
 
 .banner-button {
@@ -150,18 +157,16 @@ body {
 }
 
 .advantages {
-    background-color: #ffffff;
-    font-family: "Roboto", sans-serif;
-    width: 1170px;
-    height: 101px;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
 
 .advantages-list {
+    background-color: #ffffff;
+    font-family: "Roboto", sans-serif;
     list-style: none;
     display: flex;
     gap: 30px;
-    padding-top: 94px;
-    padding-right: 94px;
 }
 
 .advantages-list h4 {
@@ -183,6 +188,8 @@ body {
 .what-we-do {
     background-color: #ffffff;
     font-family: "Roboto", sans-serif;
+    padding-top: 0px;
+    padding-bottom: 94px;
 }
 
 .what-we-do h2 {
@@ -192,10 +199,13 @@ body {
     line-height: 1.16;
     letter-spacing: 0.03em;
     text-align: center;
+    padding-bottom: 50px;
 }
 
 .what-we-do ul {
     list-style-type: none;
+    display: flex;
+    gap: 30px;
 }
 
 .our-team {
@@ -211,16 +221,24 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-align: center;
+    padding-top: 94px;
+    padding-bottom: 50px;;
 }
 
 .our-team ul {
-    list-style-type: none;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding-bottom: 94px;;
 }
 
 .our-team-worker {
     background-color: #ffffff;
     width: 270px;
     height: 368px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-worker-name {
@@ -230,6 +248,8 @@ body {
     line-height: 1.1875;
     letter-spacing: 0.03em;
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 10px;
 }
 
 .our-team-worker-description {
@@ -238,6 +258,8 @@ body {
     line-height: 1.1875;
     letter-spacing: 0.03em;
     text-align: center;
+    padding-top:0px;
+    padding-bottom: 30px;;
 }
 
 .footer-sidebar {
@@ -246,9 +268,14 @@ body {
     height: 252px;
 }
 
+.footer-styles {
+    padding-top: 60px;
+    padding-bottom: 20px;
+}
+
 .footer-styles a {
     text-decoration: none;
-    background-color: var(--background-firs-color);
+    
     width: 145px;
     height: 31px;
 }
@@ -273,12 +300,17 @@ body {
     letter-spacing: 0.03em;
 }
 
+.footer-address {
+    
+}
+
 .footer-address address {
     font-size: 14px;
     font-style: normal;
     color: #ffffff;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    vertical-align: top;
 }
 
 .footer-address a {
@@ -287,6 +319,7 @@ body {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    vertical-align: top;
 }
 
 .footer-address a:hover,
