--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -222,7 +222,7 @@ body {
     letter-spacing: 0.03em;
     text-align: center;
     padding-top: 94px;
-    padding-bottom: 50px;;
+    padding-bottom: 50px;
 }
 
 .our-team ul {
@@ -230,15 +230,16 @@ body {
     display: flex;
     justify-content: center;
     gap: 30px;
-    padding-bottom: 94px;;
+    padding-bottom: 94px;
 }
 
 .our-team-worker {
     background-color: #ffffff;
     width: 270px;
     height: 368px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 
 .our-team-worker-name {
@@ -258,8 +259,8 @@ border-radius: 0px 0px 4px 4px;
     line-height: 1.1875;
     letter-spacing: 0.03em;
     text-align: center;
-    padding-top:0px;
-    padding-bottom: 30px;;
+    padding-top: 0px;
+    padding-bottom: 30px;
 }
 
 .footer-sidebar {
@@ -275,7 +276,7 @@ border-radius: 0px 0px 4px 4px;
 
 .footer-styles a {
     text-decoration: none;
-    
+
     width: 145px;
     height: 31px;
 }
@@ -301,7 +302,6 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .footer-address {
-    
 }
 
 .footer-address address {
@@ -332,6 +332,16 @@ border-radius: 0px 0px 4px 4px;
 .portfolio {
     background-color: #ffffff;
     font-family: "Roboto", sans-serif;
+    padding-top: 94px;
+    padding-bottom: 94px;
+    align-items: center;
+}
+
+.portfolio-filters-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 14px;
+    padding-bottom: 34px;
 }
 
 .filters-buttons {
@@ -353,13 +363,17 @@ border-radius: 0px 0px 4px 4px;
 }
 
 .portfolio-project-list {
-    list-style-type: none;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .portfolio-project {
     background-color: #ffffff;
     width: 370px;
     height: 404px;
+    border: 1px solid #eeeeee;
 }
 
 .portfolio-project-name {
@@ -368,6 +382,9 @@ border-radius: 0px 0px 4px 4px;
     color: var(--main-color);
     line-height: 2;
     letter-spacing: 0.06em;
+    padding-top: 20px;
+    padding-bottom: 4px;
+    padding-left: 24px;
 }
 
 .portfolio-project-description {
@@ -375,4 +392,7 @@ border-radius: 0px 0px 4px 4px;
     color: var(--description-color);
     line-height: 1.1875;
     letter-spacing: 0.03em;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    padding-left: 24px;
 }
