--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,11 @@
     padding: 0;
 }
 
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 body {
     font-family: "Roboto", "Raleway", sans-serif;
     color: #000000;
@@ -31,11 +36,11 @@ body {
 
 .header-sidebar {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     height: 80px;
     border-bottom: 1px solid #ececec;
 }
+
 .header-styles {
     display: flex;
     justify-content: space-between;
@@ -45,9 +50,8 @@ body {
 .header-styles a {
     text-decoration: none;
     background-color: #ffffff;
-    width: 145px;
-    height: 31px;
-    margin-right: 93px;
+    display: block;
+    margin: 24px 93px 25px 0px;
 }
 
 .logo-web {
@@ -69,24 +73,21 @@ body {
     line-height: 1.1923;
     letter-spacing: 0.03em;
 }
-
+/*
 .navi {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    flex-direction: row;
 }
-
+*/
 .navi-type a {
     text-decoration: none;
     color: var(--main-color);
     font-size: 14px;
     font-weight: 500;
     line-height: 1.38;
-    display: inline;
     letter-spacing: 0.02em;
-    width: 254px;
-    height: 16px;
+    display: inline-block;
     margin-right: 46px;
     margin-left: 0;
 }
@@ -100,6 +101,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: auto;
 }
 
 .contacts a {
@@ -157,8 +159,8 @@ body {
 }
 
 .advantages {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .advantages-list {
@@ -301,9 +303,6 @@ body {
     letter-spacing: 0.03em;
 }
 
-.footer-address {
-}
-
 .footer-address address {
     font-size: 14px;
     font-style: normal;
@@ -332,21 +331,21 @@ body {
 .portfolio {
     background-color: #ffffff;
     font-family: "Roboto", sans-serif;
-    padding-top: 94px;
-    padding-bottom: 94px;
     align-items: center;
 }
 
 .portfolio-filters-buttons {
     display: flex;
     justify-content: center;
-    gap: 14px;
-    padding-bottom: 34px;
+    gap: 8px;
+    padding-bottom: 50px;
 }
 
 .filters-buttons {
     border: none;
     background-color: var(--background-second-color);
+    width: 121px;
+    height: 38px;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.625;
@@ -354,6 +353,9 @@ body {
     letter-spacing: 0.03em;
     color: var(--main-color);
     cursor: pointer;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .filters-buttons:hover,
