--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,6 +19,8 @@
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 body {
@@ -30,7 +32,7 @@ body {
 }
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: auto;
 }
 
@@ -49,7 +51,6 @@ body {
 
 .header-styles a {
     text-decoration: none;
-    background-color: #ffffff;
     display: block;
     margin: 24px 93px 25px 0px;
 }
@@ -122,21 +123,21 @@ body {
 
 .banner {
     background-color: var(--background-firs-color);
-    width: 100%;
-    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
+
 .banner-text {
     text-decoration: none;
     color: #ffffff;
-    text-align: center;
+    width: 696px;
+    height: 120px;
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
+    text-align: center;
     letter-spacing: 0.06em;
-    vertical-align: top;
-    text-transform: uppercase;
-    padding-top: 200px;
-    padding-bottom: 30px;
+    margin: auto;
 }
 
 .banner-button {
@@ -151,11 +152,11 @@ body {
     letter-spacing: 0.06em;
     cursor: pointer;
     border: none;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+    margin-top: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    display: block;
+    margin: 30px auto;
 }
 
 .advantages {
@@ -164,8 +165,6 @@ body {
 }
 
 .advantages-list {
-    background-color: #ffffff;
-    font-family: "Roboto", sans-serif;
     list-style: none;
     display: flex;
     gap: 30px;
@@ -188,7 +187,6 @@ body {
 }
 
 .what-we-do {
-    background-color: #ffffff;
     font-family: "Roboto", sans-serif;
     padding-top: 0px;
     padding-bottom: 94px;
@@ -236,7 +234,6 @@ body {
 }
 
 .our-team-worker {
-    background-color: #ffffff;
     width: 270px;
     height: 368px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -329,7 +326,6 @@ body {
 /* portfolio styles*/
 
 .portfolio {
-    background-color: #ffffff;
     font-family: "Roboto", sans-serif;
     align-items: center;
 }
@@ -372,9 +368,11 @@ body {
 }
 
 .portfolio-project {
-    background-color: #ffffff;
     width: 370px;
     height: 404px;
+}
+
+.portfolio-project figcaption {
     border: 1px solid #eeeeee;
 }
 
@@ -387,6 +385,10 @@ body {
     padding-top: 20px;
     padding-bottom: 4px;
     padding-left: 24px;
+}
+
+.portfolio-project-list img {
+    display: block;
 }
 
 .portfolio-project-description {
