--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@
     --description-color: #757575;
     --background-firs-color: #2f303a;
     --background-second-color: #f5f4fa;
+    --background-third-color: #ffffff;
     --button: #2196f3;
     --button-text: #ffffff;
 }
@@ -211,7 +212,6 @@ body {
 .our-team {
     background-color: var(--background-second-color);
     font-family: "Roboto", sans-serif;
-    width: 100%;
 }
 
 .our-team h2 {
@@ -221,7 +221,6 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-align: center;
-    padding-top: 94px;
     padding-bottom: 50px;
 }
 
@@ -230,10 +229,10 @@ body {
     display: flex;
     justify-content: center;
     gap: 30px;
-    padding-bottom: 94px;
 }
 
 .our-team-worker {
+    background-color: var(--background-third-color);
     width: 270px;
     height: 368px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -264,18 +263,16 @@ body {
 
 .footer-sidebar {
     background-color: var(--background-firs-color);
-    width: 100%;
-    height: 252px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-styles {
-    padding-top: 60px;
     padding-bottom: 20px;
 }
 
 .footer-styles a {
     text-decoration: none;
-
     width: 145px;
     height: 31px;
 }
@@ -374,6 +371,9 @@ body {
 
 .portfolio-project figcaption {
     border: 1px solid #eeeeee;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
 }
 
 .portfolio-project-name {
@@ -382,9 +382,6 @@ body {
     color: var(--main-color);
     line-height: 2;
     letter-spacing: 0.06em;
-    padding-top: 20px;
-    padding-bottom: 4px;
-    padding-left: 24px;
 }
 
 .portfolio-project-list img {
@@ -396,7 +393,4 @@ body {
     color: var(--description-color);
     line-height: 1.1875;
     letter-spacing: 0.03em;
-    padding-top: 0px;
-    padding-bottom: 20px;
-    padding-left: 24px;
 }
