--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -56,7 +56,7 @@ body {
     margin: 24px 93px 25px 0px;
 }
 
-.logo-web {
+.logo {
     text-decoration: none;
     color: var(--logo-color-first);
     font-family: "Raleway", sans-serif;
@@ -188,7 +188,6 @@ body {
 }
 
 .what-we-do {
-    font-family: "Roboto", sans-serif;
     padding-top: 0px;
     padding-bottom: 94px;
 }
@@ -211,7 +210,6 @@ body {
 
 .our-team {
     background-color: var(--background-second-color);
-    font-family: "Roboto", sans-serif;
 }
 
 .our-team h2 {
@@ -277,16 +275,6 @@ body {
     height: 31px;
 }
 
-.logo-web-footer {
-    text-decoration: none;
-    color: var(--logo-color-first);
-    font-family: "Raleway", sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 1.1923;
-    letter-spacing: 0.03em;
-}
-
 .logo-studio-footer {
     text-decoration: none;
     color: var(--logo-color-third);
@@ -323,7 +311,6 @@ body {
 /* portfolio styles*/
 
 .portfolio {
-    font-family: "Roboto", sans-serif;
     align-items: center;
 }
 
@@ -370,10 +357,10 @@ body {
 }
 
 .portfolio-project figcaption {
-    border: 1px solid #eeeeee;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 24px;
+    border-right: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+    padding: 20px 24px;
 }
 
 .portfolio-project-name {
